<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/btn_home_selector"
        android:title="@string/bottom_home"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/studyingFragment"
        android:icon="@drawable/btn_studying_selector"
        android:title="@string/bottom_studying"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/todayFragment"
        android:icon="@drawable/btn_today_selector"
        android:title="@string/bottom_today"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/mypageFragment"
        android:icon="@drawable/btn_mypage_selector"
        android:title="@string/bottom_mypage"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>