<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".mypage.MyProfileActivity">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_setting"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/ic_back"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_iv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintTop_toBottomOf="@id/ic_back"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_profile_edit"
        app:layout_constraintEnd_toEndOf="@id/profile_iv"
        app:layout_constraintBottom_toBottomOf="@id/profile_iv"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/nickname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/profile_iv"
        app:layout_constraintStart_toStartOf="@id/ic_back"
        android:layout_marginTop="30dp"
        android:textColor="#6E6D73"/>

    <EditText
        android:id="@+id/nickname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="@id/nickname_tv"
        app:layout_constraintTop_toBottomOf="@id/nickname_tv"
        android:hint="@string/enter_nick"
        android:textSize="14dp"
        android:textColorHint="#B3B4BC"/>

    <TextView
        android:id="@+id/intro_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:text="@string/intro"
        android:layout_marginTop="30dp"
        android:textColor="#6E6D73"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname_et"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/intro_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_profile_edif_bg"
        app:layout_constraintTop_toBottomOf="@id/intro_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="17dp"
        android:hint="@string/enter_intro"
        android:textColorHint="#B3B4BC"
        android:textSize="12dp"
        android:gravity="top"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_profile_ok_bt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/ok"
        android:textSize="18dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_rectangle__main_10dp"
        android:layout_marginBottom="60dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>