<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".mypage.SettingActivity">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ic_back"
        android:textColor="#1A1A1B"
        app:layout_constraintBottom_toBottomOf="@id/ic_back"/>

    <ImageView
        android:id="@+id/notice_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_notice_mypage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/notice_iv"
        app:layout_constraintBottom_toBottomOf="@id/notice_iv"
        android:text="@string/notice_mp"
        android:textColor="#FFC1C1"
        android:textSize="15dp"
        android:layout_marginStart="78dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right_mp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="@id/notice_iv"
        app:layout_constraintBottom_toBottomOf="@id/notice_iv"/>

    <ImageView
        android:id="@+id/ver_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_about_ver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notice_iv"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ver_iv"
        app:layout_constraintBottom_toBottomOf="@+id/ver_iv"
        android:text="@string/version_about"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginStart="78dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right_mp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="@+id/ver_iv"
        app:layout_constraintBottom_toBottomOf="@+id/ver_iv"/>

    <ImageView
        android:id="@+id/dev_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_contacts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ver_iv"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dev_iv"
        app:layout_constraintBottom_toBottomOf="@+id/dev_iv"
        android:text="@string/contacts"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginStart="78dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right_mp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="@+id/dev_iv"
        app:layout_constraintBottom_toBottomOf="@+id/dev_iv"/>

    <ImageView
        android:id="@+id/logout_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dev_iv"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logout_iv"
        app:layout_constraintBottom_toBottomOf="@+id/logout_iv"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginStart="78dp"/>

    <ImageView
        android:id="@+id/logout_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right_mp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="@+id/logout_iv"
        app:layout_constraintBottom_toBottomOf="@+id/logout_iv"/>

    <ImageView
        android:id="@+id/wirhdrawal_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_withdrawal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout_iv"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wirhdrawal_iv"
        app:layout_constraintBottom_toBottomOf="@+id/wirhdrawal_iv"
        android:text="@string/withdrawal"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginStart="78dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right_mp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="@+id/wirhdrawal_iv"
        app:layout_constraintBottom_toBottomOf="@+id/wirhdrawal_iv"/>

</androidx.constraintlayout.widget.ConstraintLayout>